# codemantis

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE-1.0.0.md  RELEASES.md  SECURITY.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
.github/: dependabot.yml
catalog/: LICENSE  (+1 more)
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  preview.json
src-tauri/icons/: icon.icns
src-tauri/resources/: Credits.rtf  preview-console-bridge.js  templates.json  user-guide.md
src-tauri/resources/claude-md/: astro-starter.md  expo-starter.md  fastapi-boilerplate.md  fastapi-fullstack.md  fumadocs.md  next-forge.md  nextjs-boilerplate.md  nextjs-saas.md  nextplate.md  nextra.md  vite-react-boilerplate.md  vite-react-shadcn.md
src-tauri/resources/super-bro/: knowledge-build-errors.md  knowledge-claude-response.md  knowledge-guide-transitions.md  knowledge-post-change.md  knowledge-runtime-errors.md  knowledge-safety.md  knowledge-session-start.md  knowledge-test-failures.md  knowledge-user-stuck.md  persona.md
src-tauri/src/: errors.rs  lib.rs  main.rs  test_helpers.rs
src-tauri/src/agents/: mod.rs  registry.rs
src-tauri/src/agents/claude_code/: approval_server.rs  claude_detection.rs  cli_version.rs  event_types.rs  message_router.rs  mod.rs  process.rs  session.rs  stream_parser.rs  tests.rs
src-tauri/src/agents/codex/: agents_md.rs  approvals.rs  auth_probe.rs  binary_detect.rs  client.rs  jsonrpc.rs  mcp_config.rs  mod.rs  rollout.rs  spawn.rs  thread_state.rs  translation.rs  wire_log.rs
src-tauri/src/changelog/: mod.rs  pricing.rs  summarizer.rs
src-tauri/src/claude/: approval_server.rs  event_types.rs  message_router.rs  mod.rs  process.rs  session.rs  stream_parser.rs  tests.rs
src-tauri/src/commands/: api_logs.rs  assistant_chat.rs  attachments.rs  changelog.rs  claude_md.rs  cli_setup.rs  clone.rs  codex.rs  duo.rs  files.rs  git.rs  git_graph.rs  git_write.rs  guide.rs  help.rs  lifecycle.rs  mcp.rs  menu.rs  mod.rs  openrouter.rs  preview.rs  project_capabilities.rs  scaffold.rs  self_drive.rs  session.rs  settings.rs  slash_commands.rs  snapshot.rs  specwriter.rs  startup.rs  stats.rs  super_bro.rs  taskboard.rs  terminal.rs
src-tauri/src/duo/: analyst.rs  events.rs  mod.rs
src-tauri/src/lifecycle/: activity_assertion.rs  mod.rs  repaint.rs  sleep_observer.rs  wake_observer.rs
src-tauri/src/preflight/: ai_fallback.rs  audit.rs  catalog.rs  catalog_cache.rs  commands.rs  detection.rs  detection_files.rs  events.rs  extraction.rs  installer.rs  manifest.rs  mod.rs  secrets.rs  status.rs
src-tauri/src/preflight/verification/: api.rs  env.rs  mod.rs  secret_present.rs  shell.rs
src-tauri/src/preview/: mod.rs  port_detector.rs
src-tauri/src/recall/: commands.rs  config.rs  llm_client.rs  mod.rs
src-tauri/src/recall/enricher/: assemble.rs  entity_extraction.rs  gather.rs  mod.rs  select.rs  stream_watcher.rs
src-tauri/src/recall/git/: mod.rs  show.rs
src-tauri/src/recall/harvester/: classify.rs  dedupe.rs  fidelity.rs  generate.rs  git_watcher.rs  journal.rs  mod.rs
src-tauri/src/recall/index/: ingest.rs  mod.rs  query.rs  reindex.rs
src-tauri/src/recall/seed/: git_hotspots.rs  ingest_existing.rs  manifest_starter.rs  mod.rs
src-tauri/src/recall/specwriter/: context_section.rs  mod.rs  parity_to_landmine.rs  recovery_landmines.rs  spec_to_note.rs
src-tauri/src/recall/vault/: filesystem.rs  markdown.rs  mod.rs  wikilinks.rs
src-tauri/src/storage/: database.rs  migrations.rs  mod.rs  secret_box.rs
src-tauri/src/terminal/: pty_manager.rs
src-tauri/src/utils/: claude_detection.rs  cli_handshake_probe.rs  mod.rs  paths.rs  pid_tracker.rs
src-tauri/tests/: cli_protocol_capture.rs  codex_protocol_capture.rs  codex_protocol_smoke.rs  codex_schema_drift.rs  crash_recovery_resume.rs  database_migrations.rs  recall_enricher.rs  recall_harvester.rs  recall_model_eval.rs  recall_specwriter.rs  recent_sessions.rs  wake_recovery_resume.rs
src-tauri/tests/captures/: .gitignore  README.md
(+833 files in other folders)
