[package]
name = "codemantis"
version = "0.8.6"
description = "A native macOS desktop UI for Claude Code"
authors = ["Harald"]
edition = "2021"

[lib]
name = "codemantis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tauri-plugin-log = "2"
which = "7"
dirs = "6"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
axum = "0.8"
regex = "1"
url = "2"
tempfile = "3"
libc = "0.2"
toml = "0.8"

[dev-dependencies]
